--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-uuid": "^2.0.3",
-    "react-native-webview": "13.15.0"
+    "react-native-webview": "13.15.0",
+    "react-dom": "19.1.0",
+    "react-native-web": "^0.21.0",
+    "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
