--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "firebase": "^12.0.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-calendars": "^1.1313.0",
+    "react-native-calendar-picker": "^7.0.4",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-uuid": "^2.0.3",
     "react-native-webview": "13.15.0",
