--- a/package.json
+++ b/package.json
@@ -9,27 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-firebase/app": "^23.1.2",
     "@react-native-firebase/auth": "^23.1.2",
     "@react-navigation/native": "^7.1.17",
     "expo": "^54.0.7",
+    "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.12",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.11",
     "firebase": "^12.0.0",
+    "firebase-admin": "^13.5.0",
+    "firebase-functions": "^6.4.0",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-calendar-picker": "^7.0.4",
     "react-native-element-dropdown": "^2.12.4",
+    "react-native-svg": "^15.13.0",
     "react-native-uuid": "^2.0.3",
-    "react-native-webview": "13.15.0",
-    "react-dom": "19.1.0",
     "react-native-web": "^0.21.0",
-    "expo-crypto": "~15.0.7",
-    "expo-dev-client": "~6.0.12"
+    "react-native-webview": "13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
