--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "android": "expo run:android",
   "ios": "expo run:ios",
   "web": "expo start --web",
-  "build:web": "expo build:web",
-  "vercel-build": "npm run build:web"
+  "build:web": "expo export:web",
+"vercel-build": "expo export:web"
 },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
