--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "sambag2app",
   "version": "1.0.0",
   "main": "index.js",
- "scripts": {
-  "start": "expo start",
-  "android": "expo run:android",
-  "ios": "expo run:ios",
-  "web": "expo start --web",
-  "build:web": "expo export:web",
-"vercel-build": "expo export:web"
-},
+  "scripts": {
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+     "build": "react-scripts build",
+  "vercel-build": "npm run build"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -38,7 +38,8 @@
     "react-native-webview": "13.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-scripts": "^5.0.1"
   },
   "private": true
 }
