--- a/package.json
+++ b/package.json
@@ -3,25 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-     "build": "react-scripts build",
-  "vercel-build": "npm run build"
-  },
+  "start": "expo start",
+  "android": "expo run:android",
+  "ios": "expo run:ios",
+  "web": "expo start --web",
+  "vercel-build": "next build"
+},
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-firebase/app": "^23.1.2",
     "@react-native-firebase/auth": "^23.1.2",
     "@react-navigation/native": "^7.1.17",
-    "expo": "^54.0.7",
     "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.12",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.7",
+    "expo-router": "^6.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.11",
     "firebase": "^12.0.0",
@@ -39,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "expo": "^54.0.12",
     "react-scripts": "^5.0.1"
   },
   "private": true
