--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "start": "expo start",
-  "android": "expo run:android",
-  "ios": "expo run:ios",
-  "web": "expo start --web",
-  "vercel-build": "next build"
-},
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "vercel-build": "next build"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -26,8 +26,9 @@
     "firebase": "^12.0.0",
     "firebase-admin": "^13.5.0",
     "firebase-functions": "^6.4.0",
+    "next": "^15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-calendar-picker": "^7.0.4",
     "react-native-element-dropdown": "^2.12.4",
